# lib/swagger.json
@@ -565,13 +565,17 @@
     "definitions": {
         "registration": {
             "required": [
-                "name",
+                "firstName",
+                "lastName",
                 "emailId",
                 "password",
                 "confirmPassword"
             ],
             "properties": {
-                "name": {
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
                     "type": "string"
                 },
                 "emailId": {
